# shrimple-docs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cache.rs  docs.rs  item_printer.rs  item_visitor.rs  json.rs  main.rs  parser.rs  rust_format.rs  utils.rs
src/docview/: item_printer.rs  mod.rs
