[package]
name = "shrimple-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.27.0"
rustdoc-types = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paste = "1"
tokio = { version = "1", features = ["macros", "rt", "process"] }

[lints.clippy]
# complexity = { level = "warn", priority = -1 }
unit_arg = "allow"

# restriction = { level = "allow", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
deref_by_slicing = "warn"
infinite_loop = "warn"
mixed_read_write_in_expression = "warn"
exit = "warn"
print_stdout = "warn"
print_stderr = "warn"

pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
ignored_unit_patterns = "allow"
unsafe_derive_deserialize = "allow"

nursery = { level = "warn", priority = -1 }
option_map_or_else = "allow"
or_fun_call = "allow"
